# debugprobe

./: .gitignore  CMakeLists.txt  README.md  build.sh  flash.sh  loadcell_test.py
.github/workflows/: build.yml
embedded_common/: .gitignore  CMakeLists.txt  README.md  serial_logger.py
embedded_common/.github/workflows/: tests.yml
embedded_common/Inc/: b2b_defines.h  circular_buffer.h  eeprom.h  eeprom_evt_queue.h  global_defines.h  helpers.h  i2c.h  log.h  lte.h  mktime.h  msg_protocol.h  ntp.h  rfid.h  rs485.h  rtc.h  sara.h  uart_dma.h  vl53l1x_api.h  vl53l1x_platform.h
embedded_common/ST25R3911/: st25r3911.c  st25r3911.h
embedded_common/Src/: CMakeLists.txt  circular_buffer.c  eeprom.c  eeprom_evt_queue.c  helpers.c  i2c.c  log.c  lte.c  mktime.c  msg_protocol.c  rfid.c  rs485.c  rtc.c  sara.c  uart_dma.c  vl53l1x_api.c  vl53l1x_calibration.c  vl53l1x_platform.c
embedded_common/Tests/: CMakeLists.txt  helper_tests.h  run_tests.sh  test_helpers.h  tests.c
embedded_common/rfal/Inc/: rfal_rf.h
embedded_common/rfal/Src/: rfal_rfst25r3911.c
include/: board_debug_probe_config.h  board_example_config.h  board_pico_config.h  test_jig.h
src/: cdc_uart.c  loadcell.c  loadcell.h  main.c  test_jig.c  tusb_config.h  usb_descriptors.c
